--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/node": "^17.0.21",
     "@types/papaparse": "^5.3.16",
     "@types/three": "^0.177.0",
+    "@types/tween.js": "^18.5.1",
     "codelyzer": "6.0.2",
     "jasmine-core": "~4.4.0",
     "jasmine-spec-reporter": "~7.0.0",
