--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@fontsource/inter": "^5.2.6",
+    "@fontsource/open-sans": "^5.2.6",
     "@tweenjs/tween.js": "^25.0.0",
     "ajv": "8.11.0",
     "arrive": "2.4.1",
@@ -43,7 +45,9 @@
     "express": "4.17.3",
     "googleapis": "99.0.0",
     "hammerjs": "2.0.8",
-    "jquery": "3.6.0",
+    "jquery": "^3.6.0",
+    "jvectormap-content": "^0.1.0",
+    "jvectormap-next": "^3.1.1",
     "moment": "2.29.1",
     "papaparse": "^5.5.3",
     "perfect-scrollbar": "1.5.5",
