--- a/package.json
+++ b/package.json
@@ -45,10 +45,11 @@
     "classlist.js": "1.1.20150312",
     "eslint": "^8.11.0",
     "express": "4.17.3",
-    "firebase": "^9.15.0",
     "googleapis": "99.0.0",
     "hammerjs": "2.0.8",
+    "html2canvas": "^1.4.1",
     "jquery": "^3.6.0",
+    "jspdf": "^3.0.1",
     "jvectormap-content": "^0.1.0",
     "jvectormap-next": "^3.1.1",
     "moment": "2.29.1",
@@ -56,6 +57,7 @@
     "perfect-scrollbar": "1.5.5",
     "popper.js": "1.16.1",
     "rxjs": "~7.5.0",
+    "signature_pad": "^5.0.10",
     "three": "^0.177.0",
     "tslib": "^2.3.0",
     "web-animations-js": "2.3.2",
