--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
     "@angular/elements": "^14.2.0",
-    "@angular/fire": "^7.6.1",
+    "@angular/fire": "^7.6.0",
     "@angular/forms": "^14.2.0",
     "@angular/localize": "^14.2.0",
     "@angular/material": "^14.2.0",
@@ -58,6 +58,7 @@
     "popper.js": "1.16.1",
     "rxjs": "~7.5.0",
     "signature_pad": "^5.0.10",
+    "tesseract.js": "^4.1.1",
     "three": "^0.177.0",
     "tslib": "^2.3.0",
     "web-animations-js": "2.3.2",
