--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "jspdf": "^3.0.1",
     "jvectormap-content": "^0.1.0",
     "jvectormap-next": "^3.1.1",
+    "mermaid": "^11.9.0",
     "moment": "2.29.1",
     "papaparse": "^5.5.3",
     "perfect-scrollbar": "1.5.5",
