--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@fontsource/inter": "^5.2.6",
     "@fontsource/open-sans": "^5.2.6",
     "@tweenjs/tween.js": "^25.0.0",
+    "@types/qrcode": "^1.5.5",
     "@types/xlsx": "^0.0.35",
     "ajv": "8.11.0",
     "arrive": "2.4.1",
@@ -57,6 +58,7 @@
     "papaparse": "^5.5.3",
     "perfect-scrollbar": "1.5.5",
     "popper.js": "1.16.1",
+    "qrcode": "^1.5.4",
     "rxjs": "~7.5.0",
     "signature_pad": "^5.0.10",
     "tesseract.js": "^4.1.1",
