--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "googleapis": "99.0.0",
     "hammerjs": "2.0.8",
     "html2canvas": "^1.4.1",
+    "html5-qrcode": "^2.3.8",
     "jquery": "^3.6.0",
     "jspdf": "^3.0.1",
     "jvectormap-content": "^0.1.0",
