--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@tweenjs/tween.js": "^25.0.0",
     "@types/qrcode": "^1.5.5",
     "@types/xlsx": "^0.0.35",
+    "@zxing/library": "^0.21.3",
     "ajv": "8.11.0",
     "arrive": "2.4.1",
     "bootstrap": "4.6.1",
@@ -52,6 +53,7 @@
     "html5-qrcode": "^2.3.8",
     "jquery": "^3.6.0",
     "jspdf": "^3.0.1",
+    "jsqr": "^1.4.0",
     "jvectormap-content": "^0.1.0",
     "jvectormap-next": "^3.1.1",
     "mermaid": "^11.9.0",
