--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "chartist": "0.11.4",
     "classlist.js": "1.1.20150312",
     "eslint": "^8.11.0",
+    "exceljs": "^4.4.0",
     "express": "4.17.3",
     "googleapis": "99.0.0",
     "hammerjs": "2.0.8",
