--- a/angular.json
+++ b/angular.json
@@ -22,6 +22,7 @@
             ],
             "styles": [
               "node_modules/perfect-scrollbar/css/perfect-scrollbar.css",
+              "src/assets/css/local-fonts.css",
               "src/assets/scss/material-dashboard.scss",
               "src/assets/css/demo.css"
             ],
