--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "jsqr": "^1.4.0",
     "jvectormap-content": "^0.1.0",
     "jvectormap-next": "^3.1.1",
+    "lucide-angular": "^0.542.0",
     "mermaid": "^11.9.0",
     "moment": "2.29.1",
     "papaparse": "^5.5.3",
