--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,10 @@
     "target": "es2020",
     "lib": [
       "es2020",
-      "dom"
+      "dom",
+      "webworker"
     ],
+    "skipLibCheck": true,
     "typeRoots": [
       "node_modules/@types"
     ],
